--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,11 @@
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
 
@@ -53,8 +53,8 @@
 		</div>
 	</div>
 
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="app.js"></script>
+  <script src="js/angular.min.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 </html>
