--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 <body>
 
 	<div style="padding: 20px;">
+		
+	
 		<div data-ng-controller="form">
+			<div class="alert alert-success">
+				<h3>Form data:</h3>
+				<div id="results">{{form_data}}</div>
+			</div>
+		
 			<form name="demoForm" novalidate role="form">
 				<div data-ng-show="progress.active()" style="color: red; font-size: 50px;">Sending…</div>
 				<div id="messages" class="alert alert-success" data-ng-show="messages" data-ng-bind="messages"></div>
